change gitignore - add .idea'

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ Multithreading/obj
 Multithreading/Properties
 Multithreading/ConsoleApplication1.csproj
 Multithreading/ConsoleApplication1.csproj.user
-Multithreading/idea
+Multithreading/.idea
