--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ Multithreading/obj
 Multithreading/Properties
 Multithreading/ConsoleApplication1.csproj
 Multithreading/ConsoleApplication1.csproj.user
+Multithreading/ConsoleApplication1.sln
+Multithreading/ConsoleApplication1.suo
 Multithreading/.idea
